<resources>
    <string name="app_name">TravelTime</string>
    <string name="trevel_time_name">Пора в путешествие!</string>
    <string name="flights_title">Авиабилеты</string>
    <string name="one_flight_details_title">Детализация полета</string>
    <string name="avia_tickets">Авиабилеты</string>
    <string name="details_for_ticket">Детализация полета</string>
    <string name="departure_picture_description">Отправление</string>
    <string name="arrival_picture_description">Прибытие</string>
    <string name="like_button_description">Кнопка лайк</string>
    <string name="logo_description">Логотип</string>
    <string name="no_network">Нет сети!</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
    <string name="server_error_pic_descriptoin">Картинка нет интернета</string>
    <string name="try_again_server_error">ОБНОВИТЬ</string>
    <string name="chronodays">Дней в путешествии - %1$s</string>
    <string name="departure_title">Отправление</string>
    <string name="arrival_title">Прибытие</string>
</resources>