<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/one_flight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding"
    android:elevation="15dp"
    android:padding="@dimen/padding"
    app:cardCornerRadius="15dp"
    tools:context=".activity.fragment.CardFlightFragment">

    <ImageView
        android:id="@+id/departure_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/departure_picture_description"
        android:src="@drawable/ic_baseline_flight_takeoff_24" />

    <TextView
        android:id="@+id/departure_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:textColor="?attr/textFillColor"
        android:textSize="@dimen/date_text_size" />

    <TextView
        android:id="@+id/departure_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/textFillColor" />

    <ImageView
        android:id="@+id/arrival_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/arrival_picture_description"
        android:src="@drawable/ic_baseline_flight_land_24" />

    <TextView
        android:id="@+id/arrival_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:textColor="?attr/textFillColor"
        android:textSize="@dimen/date_text_size" />

    <TextView
        android:id="@+id/arrival_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/textFillColor" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/textFillColor"
        android:textSize="@dimen/price_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:checkable="true"
        android:contentDescription="@string/like_button_description"
        app:icon="@drawable/like_checkbox" />

</androidx.cardview.widget.CardView>